[package]
name = "roseconv"
version = "0.1.1"
authors = ["Ralph Minderhoud <ralphminderhoud@gmail.com>"]
homepage = "ralphminderhoud.com"

[dependencies]
clap = {version = "2.29", features = ["yaml"]}
failure = "0.1"
image = "0.18"
roselib = {path = "../rose-lib"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
