[package]
name = "roselib"
version = "0.1.1"
authors = ["Ralph Minderhoud <ralphminderhoud@gmail.com>"]
homepage = "ralphminderhoud.com"
edition = "2018"

[dependencies]
byteorder = "1.2"
encoding_rs = "0.8"
failure = "0.1"
lazy_static = "1.4"
rusqlite = { version = "0.20", features = ["bundled", "vtab"] }
serde = { version = "1.0", features = ["derive"] }
